# totp

./: .gitignore  CMakeLists.txt  DEBUG  LICENSE  Makefile  README  README.md  base32.c  keygen.c  ld.supp  main.c  otp.c  otp.h  otpauth.c  qr.c  qr.h  secret  submission.c  test_otp.c
doc/: HOTP  LINKS  TOTP
inc/: qr.h
lib/: CMakeLists.txt
lib/otp/: CMakeLists.txt  otp.c
lib/qr/: CMakeLists.txt  qr.c  test_base32.c
src/: CMakeLists.txt  test_qr.c
test/: CMakeLists.txt  base32.c  keygen.c  otp.c  otpauth.c  qr.c
